# abseil-cpp

./: abseil.podspec  get_headers.py
absl/base/internal/: bits.h
absl/debugging/: failure_signal_handler.cc
absl/strings/: string_view.h
absl/time/: time.h
test/: CMakeLists.txt  README.md  test.cpp
